--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,20 @@ services:
       # Имя Docker-файла из которого будет собран образ
       dockerfile: Dockerfile
       # Команда, которая будет выполнена после старта сервиса
-    environment:
-      - TOKEN=${TOKEN}
     env_file: .env
     command: /app/.venv/bin/python run.py
+    networks:
+      - bot
+    depends_on:
+      - redis
+
+  redis:
+    image: redis
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    networks:
+      - bot
+
+networks:
+  bot:
