--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,25 @@ services:
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
     command: redis-server --requirepass ${REDIS_PASSWORD}
+    volumes:
+      - redis-data:/data
     networks:
       - bot
 
+  scheduler:
+    build:
+      context: .
+      dockerfile: app/workers/scheduler/Dockerfile
+    env_file: .env
+    command: /app/.venv/bin/python /app/.venv/bin/arq app.workers.scheduler.main.WorkerSettings
+    networks:
+      - bot
+    depends_on:
+      - redis
+      - app
+
 networks:
   bot:
+
+volumes:
+  redis-data:
