Add donate cmd, update Dockerf, fix problems

--- a/app/workers/scheduler/Dockerfile
+++ b/app/workers/scheduler/Dockerfile
@@ -8,9 +8,9 @@ COPY poetry.lock pyproject.toml ./
 
 RUN python -m pip install --no-cache-dir poetry==$POETRY_VERSION \
     && poetry config virtualenvs.in-project $POETRY_VIRTUALENVS_CREATE \
-    && poetry install --no-ansi
+    && poetry install --without dev --no-interaction --no-ansi
 
 FROM python:3.12.2-slim-bookworm
 
 COPY --from=builder /app /app
-COPY .. ./
+COPY . ./
